# eccodes-cosmo-resources-python

./: .gitmodules  README.md  definitions.edzw-2.40.0-1.tar.bz2  definitions.edzw-2.42.0-2.tar.bz2  definitions.edzw-2.44.0-1.tar.bz2  eccodes_definitions.edzw-2.38.3-1.tar.bz2  hatch_build.py  pyproject.toml
.github/workflows/: publish.yaml
src/eccodes_cosmo_resources/: __about__.py  path.py
